# aic

./: README.md  aic.repos  ieec.repos  pixi.toml
aic_adapter/: CMakeLists.txt  package.xml
aic_adapter/include/aic_adapter/: aic_adapter.hpp
aic_adapter/src/: aic_adapter.cpp
aic_assets/models/Camera Mount/: cam_mount_macro.xacro
aic_assets/models/NIC Card Mount/: model.sdf  nic_card_mount_macro.xacro
aic_assets/models/SC Plug/: model.sdf
aic_assets/models/SFP Module/: model.sdf
aic_assets/models/sfp_sc_cable/: model.sdf
aic_bringup/: CMakeLists.txt  README.md
aic_bringup/config/: aic_ros2_controllers.yaml
aic_bringup/launch/: aic_gz_bringup.launch.py
aic_bringup/rviz/: aic.rviz
aic_controller/include/aic_controller/actions/: cartesian_impedance_action.hpp
aic_controller/src/: aic_controller.cpp  aic_controller_parameters.yaml
aic_controller/src/actions/: cartesian_impedance_action.cpp
aic_description/urdf/: ur_gz.urdf.xacro
aic_engine/: CMakeLists.txt  package.xml
aic_engine/config/: sample_config.yaml
aic_engine/src/: aic_engine.cpp  aic_engine.hpp
aic_example_policies/: package.xml
aic_example_policies/aic_example_policies/ros/: CheatCode.py  WaveArm.py
aic_interfaces/aic_model_interfaces/: CMakeLists.txt  package.xml  pixi.toml
aic_interfaces/aic_model_interfaces/msg/: Observation.msg
aic_model/aic_model/: aic_model.py  policy.py
aic_model/test/: create_and_cancel_task.py
aic_scoring/include/aic_scoring/: ScoringTier2.hh
aic_scoring/src/: ScoringTier2.cc
aic_utils/aic_teleoperation/: README.md  package.xml  pixi.toml  setup.cfg  setup.py
aic_utils/aic_teleoperation/aic_teleoperation/: cartesian_keyboard_teleop.py  joint_keyboard_teleop.py
aic_utils/lerobot_robot_aic/: README.md  setup.py
aic_utils/lerobot_robot_aic/lerobot_robot_aic/: __init__.py  aic_robot.py  aic_robot_aic_controller.py  aic_teleop.py  types.py
docker/: docker-compose.yaml
docker/aic_model/: Dockerfile
docs/: aic_controller.md  aic_interfaces.md  challenge_rules.md  getting_started.md  glossary.md  participant_utilities.md  phases.md  policy.md  submission.md  task_board_description.md
ieec_assets/: CMakeLists.txt  package.xml
ieec_assets/hooks/: ieec_assets.dsv.in
ieec_description/: CMakeLists.txt  package.xml
ieec_description/world/: ieec.sdf
